# Shell_Command_Menu

./: .gitignore  .pre-commit-config.yaml  .rusty-hook.toml  Cargo.toml  README.md  exampleimport.csv  main.rs  test_commands.csv  zoom_iterm.scpt
.github/: dependabot.yml
.github/workflows/: codecov.yml  release_linux.yml  release_mac.yml  rust-clippy.yml
assets/: zoom_iterm.scpt
src/: changelog.md  commands.rs  config.rs  csv.rs  edit.rs  import.rs  lib.rs  main.rs  menu.rs  menu_edit.rs  menu_main.rs  utils.rs
tests/: assert_cmd.rs  test.rs
tests/fixtures/: commands.csv  empty.csv  invalid.csv
