[package]
name = "shell_command_menu"
version = "0.2.4"
edition = "2024"

[dependencies]
directories = "6.0.0"
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
termion = "4.0.5"
prettytable = "0.10.0"
inquire = "0.8.0"
textwrap = "0.16.2"
rodio = "0.21.1"
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.99"
csv = "1.3.0"


[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.22.0"
