[package]
name = "shell_command_menu"
version = "0.2.4"
edition = "2024"

[dependencies]
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
termion = "4.0.6"
prettytable = "0.10.0"
inquire = "0.9.2"
textwrap = "0.16.2"
rodio = "0.21.1"
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.100"
csv = "1.4.0"


[dev-dependencies]
serial_test = "3.3.1"
tempfile = "3.24.0"
