[package]
name = "shell_command_menu"
version = "0.2.6"
edition = "2024"

[dependencies]
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
termion = "4.0.6"
prettytable = "0.10.0"
inquire = "0.9.4"
textwrap = "0.16.2"
rodio = "0.22.2"
tokio = { version = "1.50.0", features = ["full"] }
anyhow = "1.0.102"
csv = "1.4.0"


[dev-dependencies]
serial_test = "3.4.0"
tempfile = "3.27.0"
